Fix crash when mouseovering things that disappear (bug 196012), r=peterl@netscape.com, sr=bryner@netscape.com, a=asa